height of slider fixed on mobile

--- a/less/start.less
+++ b/less/start.less
@@ -2125,11 +2125,25 @@ svg {
 position:relative;
 
 }
-#comp1 g, #vendors g{
-    position:absolute;
+#comp1 #shape1, #vendors #boy1, #vendors #boy2, #vendors #boy3, #vendors #girl1
+#comp1 #shape2,
+#comp1 #shape3,
+#comp1 #shape4,
+#comp1 #shape5,
+#comp1 #shape6,
+#comp1 #shape7,
+#comp1 #shape8,
+#comp1 #shape9,
+#comp1 #shape10,
+#comp1 #shape11,
+#comp1 #shape12
+
+
+
+{
+   
   
-    transform-origin: 50% 50%;
-    transition:all 0.5s;
+  
  
    /* transform: scale(0.1) translateX(0px) rotate(0deg);*/
 }
@@ -2302,10 +2316,7 @@ position:relative;
         transform: scale(0.9) translateY(0);
     }
   }
-#boy1, #boy2, #boy3, #boy4, #girl1{
 
-    transform:scale(0);
-}
 
   #vendors .st0{fill:#0F244E;stroke:#FFFFFF;stroke-width:1;stroke-linecap:round;stroke-miterlimit:10;}
   #vendors .st1{fill:none;stroke:#FFFFFF;stroke-width:8;stroke-linecap:round;stroke-miterlimit:10;}
@@ -2680,7 +2691,24 @@ margin-top:0;
 
     @media only screen and (max-width: 576px)
 
-{.equalize-container-margin{
+
+  
+
+{
+    .img-fluid{
+
+        width: 90vw;
+        height: 100vh;
+    
+        object-fit:cover;
+        object-position: 0 0;
+    }
+.slides{
+    justify-content:center;
+}
+    
+    
+    .equalize-container-margin{
 
     height:unset !important;
 }
@@ -2748,3 +2776,32 @@ footer .bottom-part div{
     object-fit: contain;
     object-position: 0 0;
 }
+
+
+@media(max-width:991px){
+    #slider{
+    width:100%;
+    justify-content:center;
+        max-height:60vh;
+overflow:hidden;
+
+        .slides{width:100%;
+            height:100%;
+align-items:flex-start;
+            justify-content:flex-start;
+
+
+            .img-fluid{
+
+                width: 100%;
+                height: auto;
+            
+                object-fit: cover;
+                object-position: 0 0;
+            }
+        }
+
+
+    }
+    
+    }
